--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
     "framer-motion": "^4.0.3",
+    "mongodb": "^4.1.2",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
